--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -2,29 +2,29 @@
     \label{sec:problem}
     \input{problem}
 
-\newpage
+\clearpage
 \section{Trustful systems and Macroeconomics}
     \label{sec:macroeconomics}
    \input{macroeconomics}
-\newpage
+\clearpage
 \section{The Bitcoin Network}
     \label{sec:bitcoin}
     \input{bitcoin}
-
+\clearpage
 \section{Scaling Bitcoin}
     \label{sec:results}
 %    \input{results}
-
+\clearpage
 \section{Lightning Network}
-
+\clearpage
 \section{Evaluation}
-
+\clearpage
 \section{Results}
-
+\clearpage
 \section{Discussion}
     \label{sec:discussion}
  %   \input{discussion}
-
+\clearpage
 \section{Acknowledgments}
     \label{sec:acknowledgments}
  %   \input{acknowledgments}
