--- a/docs/main.tex
+++ b/docs/main.tex
@@ -20,6 +20,7 @@
 % \usepackage{upgreek}
 \usepackage{tikz}
 \usepackage{csquotes}
+\usepackage{pgfplots}
 
 \def\mytitle{Routing Fee Estimation in Lightning Network}
 
@@ -160,8 +161,10 @@
 
     \twocolumn
     \input{contents}
+
+    \onecolumn
     \newpage
-%    \addcontentsline{toc}{section}{References}
+    \addcontentsline{toc}{section}{References}
     \bibliographystyle{plain}
     \bibliography{references.bib}
     %\input{appendices}
