--- a/docs/references.bib
+++ b/docs/references.bib
@@ -3,6 +3,7 @@
 @misc{repository:bitcoin:sourceforge,
 	author = {},
 	title = {Original bitcoin repository with the genisis block function},
+	year = 2009-,
 	howpublished = {
 		\url{https://sourceforge.net/p/bitcoin/code/133/tree/trunk/main.cpp#l1673}},
 	note = {The source forge repostiory was later moved to github.},
@@ -10,6 +11,7 @@
 
 @misc{bitcoin:genesis:coinbase,
 	author = {},
+	year = 2009,
 	title = {The coinbase transaction of the genesis block.},
 	howpublished = {
 		\url{https://www.blockchain.com/btc/tx/4a5e1e4baab89f3a32518a88c31bc87f618f76673e2cc77ab2127b7afdeda33b?show_adv=true}},
@@ -43,32 +45,52 @@
 	title = {Shelling out},
 	publisher = {},
 	year = {2002},
-	volume = {2}
-	year = 1892
 	howpublished = {\url{https://nakamotoinstitute.org/shelling-out/}}
-	pages = {239-55}
 }
-
-
 
 @article{
 	menger:origins:money,
 	author = {Menger, Carl},   
 	title = {On the Origins of Money},
-	publisher = {O'Reilly Media},
-	month = {July},
-	year = {2014},
-	edition = {first},
 	note = { },
 	journal =  Economic Journal,
-	volume = {2}
-	year = 1892
-	howpublished = {\url{http://www.socsci.mcmaster.ca/~econ/ugcm/3ll3/menger/money.txt}}
+	year = 1892,
+	howpublished = {\url{http://www.socsci.mcmaster.ca/~econ/ugcm/3ll3/menger/money.txt}},
 	pages = {239-55}
 }
 
 
-andra upplagan, 1911
+@article{
+	patterson:monetary:drains,
+	author = {Patterson, R. H.},   
+	title = {On Our Home Monetary Drains, and the Crisis of 1866},
+	publisher = {Wiley for the Royal Statistical Society},
+	month = {June},
+	year = {1870},
+	note = { },
+	journal =  Journal of the Statistical Society of London,
+	volume = {33},
+	number = 2,
+	year = 1892,
+	howpublished = {\url{https://www.jstor.org/stable/2338715?read-now=1&seq=1#page_scan_tab_contents}},
+	pages = {216-242},
+	DOI = 10.2307/2338715
+}
+
+@book{
+	lips:gold:wars,
+	author = {Lips, Ferdinand},
+	title = {Gold Wars 
+	The Battle Against Sound Money 
+	As Seen From A Swiss Perspective},
+	year = 2001,
+	publisher = {The Foundation for the Advancement of 
+	Monetary Education },
+	howpublished = {
+		\url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.466.9805&rep=rep1&type=pdf}
+	}
+
+}
 
 % Bitcoin
 
@@ -87,7 +109,7 @@ andra upplagan, 1911
 	nakamoto:bitcoin,
 	author = { Nakamoto, Satoshi},
 	title = { Bitcoin: A Peer-to-Peer Electronic Cash System },
-	
+	year = 2008,
 	howpublished = { https://bitcoin.org/bitcoin.pdf },
 	issue_date = {31 october 2008},
 }
@@ -96,7 +118,7 @@ andra upplagan, 1911
 	back:hashcash,
 	author = { Back\\, Adam},
 	title = { Hashcash - A Denial of Service Counter-Measure\\ },
-	
+	year = 2002,
 	howpublished = { http://www.hashcash.org/papers/hashcash.pdf \\},
 	issue_date = {a August 2002},
 }
@@ -104,6 +126,7 @@ andra upplagan, 1911
 @misc{repository:bitcoin,
 	author = {},
 	title = {Bitcoin Reference Implementation},
+	year = 2009-,
 	howpublished = {
 	\url{https://github.com/bitcoin/bitcoin}},
 	note = {},
@@ -112,6 +135,7 @@ andra upplagan, 1911
 @misc{repository:neutrino,
 	author = {},
 	title = {Light weight Bitcoin node implementation},
+	year = "",
 	howpublished = {
 	\url{https://github.com/lightninglabs/neutrino}},
 	note = {},
@@ -120,6 +144,7 @@ andra upplagan, 1911
 @misc{repository:btcd,
 	author = {},
 	title = {btcd: a full node Bitcoin implementation},
+	year = "",
 	howpublished = {\\
 	\url{https://github.com/btcsuite/btcd}},
 	note = {},
@@ -130,6 +155,7 @@ andra upplagan, 1911
 @misc{repository:bip:segwit,
 	author = {Lombrozo, Eric; Lau, Johnson; Wuille, Pieter},
 	title = {BIP 0141 Segregated Witness},
+	year = "",
 	howpublished = {\\
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki}},
 	note = {\\(Accessed on 06/11/2018)\\},
@@ -138,6 +164,7 @@ andra upplagan, 1911
 @misc{repository:bip:uasf:segwit,
 	author = {},
 	title = {BIP 0141 Segregated Witness},
+	year = "",
 	howpublished = {\\
 	\url{https://github.com/bitcoin/bips/blob/master/bip-0148.mediawiki}},
 	note = {\\(Accessed on 06/11/2018)\\},
@@ -146,6 +173,7 @@ andra upplagan, 1911
 @misc{bip,
 	author = {},
 	title = {Bitcoin improvement proposals },
+	year = "",
 	howpublished = {
 	\url{https://github.com/bitcoin/bips}},
 	note = {},
@@ -166,6 +194,7 @@ TOR, reverse govern-print mention
 	author = {Poon, Joseph; Dryja, Thaddeus},
 	howpublished = { \url{https://lightning.network/lightning-network-paper.pdf} },
 	issue_date = {14 january 2016 DRAFT Version 0.5.9.2},
+	year = 2016,
 }
 
 @misc{repository:lightning:rfc,
@@ -174,6 +203,7 @@ TOR, reverse govern-print mention
 	howpublished = {\\
 	\url{https://github.com/lightningnetwork/lightning-rfc}},
 	note = {},
+	year = "",
 }
 
 @misc{repository:lnd,
@@ -182,6 +212,7 @@ TOR, reverse govern-print mention
 	howpublished = {
 	\url{https://github.com/lightningnetwork/lnd}},
 	note = {},
+	year = "",
 }
 
 @misc{repository:clightning,
@@ -190,6 +221,7 @@ TOR, reverse govern-print mention
 	howpublished = {
 	\url{https://github.com/ElementsProject/lightning}},
 	note = {},
+	year = "",
 }
 
 @misc{repository:eclair,
@@ -198,6 +230,7 @@ TOR, reverse govern-print mention
 	howpublished = {
 	\url{https://github.com/ACINQ/eclair}},
 	note = {},
+	year = "",
 }
 
 @misc{repository:lit,
@@ -206,6 +239,7 @@ title = {Lightning node lit developed under MIT Digital Currency Initative},
 howpublished = {
 	\url{https://github.com/mit-dci/lit}},
 note = {},
+year = "",
 }
 
 % My repositories
@@ -216,6 +250,7 @@ note = {},
 	howpublished = {
 	\url{https://github.com/Johnstedt/master-thesis-ln-fee-estimation}},
 	note = {},
+	year = "",
 }
 
 % Game Theory 
