--- a/docs/main.tex
+++ b/docs/main.tex
@@ -21,6 +21,7 @@
 \usepackage{tikz}
 \usepackage{csquotes}
 \usepackage{pgfplots}
+\usepackage{svg}
 
 \def\mytitle{Routing Fee Estimation in Lightning Network}
 
