--- a/docs/references.bib
+++ b/docs/references.bib
@@ -89,7 +89,26 @@
 	howpublished = {
 		\url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.466.9805&rep=rep1&type=pdf}
 	}
+}
 
+@misc{
+	world:gold:council,
+	author = {},
+	year = 2019,
+	title = {The World Gold Council},
+	howpublished = {
+		\url{https://gold.org}
+	}
+}
+
+@book{
+    ammous:bitcoin:standard,
+	author = {Ammous. Saifeadean},
+	title = {The Bitcoin Standard},
+	year = 2018,
+	month = mars,
+	day = 23,
+	publisher = { Wiley },
 }
 
 % Bitcoin
