start on elastic

--- a/docs/macroeconomics.tex
+++ b/docs/macroeconomics.tex
@@ -91,7 +91,11 @@ There has been many so called bank runs in history. The public gets suspicious i
 	"When a Panic occurs, a much more serious home-drain is produced upon the bank. At such time cheques fall somewhat into disrepute, so that merchants in some cases require payment in cash. The public also, to some extent, take to hoarding[...]. But a very large part of the drain upon the Bank of England in the form of hoarding ,[...],is made by other banks: for these banks being liable to unusual demands on the part of their customers, have to keep in hand a larger stock of money than usual"\cite{patterson:monetary:drains}
 \end{displayquote}
 
+Overall most larger institutions stayed solvent and bank runs is more an exception than a rule during this time period. Since all major currencies were denominated in gold the threshold for global trade sank. During the gold standard era the economy boomed with trade and is often known under the French term 'Belle Epoque' or 'Beautiful era'. 
+
 \subsection{Elasticity of money}
+
+It all came crashing down with the 
 
 
 
