--- a/docs/main.tex
+++ b/docs/main.tex
@@ -23,6 +23,9 @@
 \usepackage{pgfplots}
 \usepackage{svg}
 
+\usepackage[utf8x]{inputenc}
+\usepackage[T1]{fontenc}
+
 \def\mytitle{Routing Fee Estimation in Lightning Network}
 
 % Routing Fee Estimation in Bidirectional payment channel networks
