--- a/docs/references.bib
+++ b/docs/references.bib
@@ -111,6 +111,9 @@
 	publisher = { Wiley },
 }
 
+
+
+
 % Bitcoin
 
 @book{
@@ -169,6 +172,95 @@
 	note = {},
 }
 
+@misc{
+	fed:function:money,
+	title = {Functions of Money},
+	author = {Federal Reserve Bank of Saint Luis},
+	year = "",
+%	volume = "1",
+	howpublished = {
+		\url{https://www.stlouisfed.org/education/economic-lowdown-podcast-series/episode-9-functions-of-money}
+	},
+}
+
+@book{
+	hanke:krus:hyperinflation:table,
+	author = {Hanke, Steve H.; Krus, Nicholas},
+	title = "World Hyperinflations",
+	year = "2012",
+	month = "August",
+	day = "15",
+	howpublished = {
+		\url{https://upload.wikimedia.org/wikipedia/en/8/88/The_Hanke_Krus_Hyperinflation_Table.pdf}
+	},
+}
+
+@article{
+	weber:bitcoin:standard,
+	title = {A Bitcoin Standard: Lessons from the Gold Standard},
+	author = { Weber, Warren E. },
+	publisher = {Bank of Canada},
+	month = "October",
+	year = "2015",
+	howpublished = {
+		\url{https://www.bankofcanada.ca/wp-content/uploads/2015/12/bitcoin-standard-lessons.pdf}
+	},
+}
+
+@misc{
+	hanke:hyperinflation,
+	author={Hanke, Steve H.},
+	title={Venezuela Hyperinflation}
+	howpublished = {
+		\url{https://www.forbes.com/sites/stevehanke/2018/10/23/venezuelas-hyperinflation-24-months-and-counting/#778fc64a162d}
+	},	
+}
+
+@misc{
+	roosevelt:6102,
+	author = {Roosevelt, Franklin D.},
+	title = "Executive order 6102",
+	howpublished = {
+		\url{https://en.wikipedia.org/wiki/Executive_Order_6102#/media/File:Executive_Order_6102.jpg}
+	},	
+}
+
+@mist{
+	gold:reserve:act,
+	author = {Roosevelt, Franklin D.},
+	title = "The Gold Reserve Act",
+	year = "1934",
+	month = "January",
+	day = "30",
+	howpublished = {
+		\url{	http://legisworks.org/congress/73/publaw-87.pdf}
+	},	
+}
+
+@book{
+	keynes:general:theory,
+	author = {Keynes, John Maynard},
+	title = "The General Theory of Employment, 
+	Interest, and Money",
+	year = "1936",
+	howpublished = {
+		\url{http://cas2.umkc.edu/economics/people/facultypages/kregel/courses/econ645/winter2011/generaltheory.pdf}
+	}
+}
+
+@article{
+	bordo:bretton:woods,
+	title={The imbalances of the Bretton Woods system 1965 to 1973: U.S. Inflation, the elephants in the room},
+	author={Bordo, Michael D.}
+	publisher={National bureau of economic research 1050 massachusetts avenue, cambridge, MA 02138, December 2018},
+	howpublished = {
+		\url{http://papers.nber.org/tmp/42782-w25409.pdf}
+	}
+}
+
+
+
+
 % Bitcoin - Bips
 
 @misc{repository:bip:segwit,
@@ -176,7 +268,7 @@
 	title = {BIP 0141 Segregated Witness},
 	year = "",
 	howpublished = {\\
-	\url{https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki}},
+		\url{https://github.com/bitcoin/bips/blob/master/bip-0141.mediawiki}},
 	note = {\\(Accessed on 06/11/2018)\\},
 }
 
