--- a/docs/contents.tex
+++ b/docs/contents.tex
@@ -3,7 +3,7 @@
     \input{problem}
 
 \clearpage
-\section{Trustful systems and Macroeconomics}
+\section{Systems of Trust}
     \label{sec:macroeconomics}
    \input{macroeconomics}
 \clearpage
