--- a/docs/references.bib
+++ b/docs/references.bib
@@ -258,8 +258,31 @@
 	}
 }
 
+@misc{nakamoto:post:deflation,
+	author = {nakamoto, Satoshi},
+	title = {Bitcoin talk forum post},
+	year = "2010",
+	howpublished = {\\
+		\url{https://bitcointalk.org/index.php?topic=57.msg415#msg415}},
+	note = {\\(Accessed on 06/11/2018)\\},
+}
 
+@misc{nakamoto:govern:print,
+	author = {Nakamoto, Satoshi},
+	title = {Bitcoin talk forum post},
+	year = "2010",
+	howpublished = {\\
+	\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}},
+	note = {\\(Accessed on 06/11/2018)\\},
+}
 
+% Satoshi forum posts
+https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
+
+# 13 | 527
+https://bitcointalk.org/index.php?topic=13.msg46#msg46
+
+TOR, reverse govern-print mention
 
 % Bitcoin - Bips
 
@@ -290,13 +313,7 @@
 	note = {},
 }
 
-% Satoshi forum posts
-https://bitcointalk.org/index.php?action=profile;u=3;sa=showPosts;start=520
 
-# 13 | 527
-https://bitcointalk.org/index.php?topic=13.msg46#msg46
-
-TOR, reverse govern-print mention
 
 % Lightning 
 
